# Messenger-Client

./: .gitignore  CMakeLists.txt  Client.pro  README.md  main.cpp  resource.qrc
Client/: Client.pro  client.cpp  client.hpp  client.ui  clientback.cpp  clientback.hpp  clientgui.cpp  clientgui.hpp  clientgui.ui  encryption.cpp  encryption.hpp  main.cpp  registration.cpp  registration.hpp  registration.ui  resource.qrc
build-Client-Desktop_Qt_5_15_2_GCC_64bit-Debug/: Client  Makefile  moc_client.cpp  moc_clientback.cpp  moc_clientgui.cpp  moc_registration.cpp  moc_widget.cpp  ui_client.h  ui_clientgui.h  ui_registration.h
forms/: client.ui
include/: client.hpp  clientback.hpp  encryption.hpp  registration.hpp
src/: client.cpp  clientback.cpp  encryption.cpp  registration.cpp
styles/: client.css  registration.css
tools/: build.sh  messenger.sh
